RESOLVED FIXED15636
some JavaScriptCore regression tests are failing due to numeric conversion
https://bugs.webkit.org/show_bug.cgi?id=15636
Summary some JavaScriptCore regression tests are failing due to numeric conversion
Darin Adler
Reported 2007-10-22 23:32:32 PDT
I broke getUInt32 -- it's returning true numbers outside the 32-bit integer range. This needs to be fixed right away. Working on it.
Attachments
patch (13.23 KB, patch)
2007-10-22 23:51 PDT, Darin Adler
mjs: review+
Darin Adler
Comment 1 2007-10-22 23:51:59 PDT
Maciej Stachowiak
Comment 2 2007-10-22 23:55:28 PDT
Comment on attachment 16818 [details] patch r=me
Mark Rowe (bdash)
Comment 3 2007-10-23 04:31:14 PDT
This was landed in r26912.
Note You need to log in before you can comment on or make changes to this bug.