third_party/WebKit/JavaScriptCore/kjs/value.h
@@ -77,8 +77,9 @@ public:
     const JSObject *getObject() const; // NULL if not an object
 
     // Extracting integer values.
-    bool getInt32(int32_t&) const;
     bool getUInt32(uint32_t&) const;
+    bool getTruncatedInt32(int32_t&) const;
+    bool getTruncatedUInt32(uint32_t&) const;
 
     // Basic conversions.
     JSValue *toPrimitive(ExecState *exec, JSType preferredType = UnspecifiedType) const;
@@ -141,8 +142,9 @@ public:
     const JSObject *getObject() const; // NULL if not an object
 
     // Extracting integer values.
-    virtual bool getInt32(int32_t&) const;
     virtual bool getUInt32(uint32_t&) const;
+    virtual bool getTruncatedInt32(int32_t&) const;
+    virtual bool getTruncatedUInt32(uint32_t&) const;
 
     // Basic conversions.
     virtual JSValue *toPrimitive(ExecState *exec, JSType preferredType = UnspecifiedType) const = 0;
@@ -333,14 +335,19 @@ inline const JSObject *JSValue::getObject() const
     return JSImmediate::isImmediate(this) ? 0 : asCell()->getObject();
 }
 
-inline bool JSValue::getInt32(int32_t& v) const
-{
-    return JSImmediate::isImmediate(this) ? JSImmediate::getInt32(this, v) : asCell()->getInt32(v);
-}
-
 inline bool JSValue::getUInt32(uint32_t& v) const
 {
     return JSImmediate::isImmediate(this) ? JSImmediate::getUInt32(this, v) : asCell()->getUInt32(v);
+}
+
+inline bool JSValue::getTruncatedInt32(int32_t& v) const
+{
+    return JSImmediate::isImmediate(this) ? JSImmediate::getTruncatedInt32(this, v) : asCell()->getTruncatedInt32(v);
+}
+
+inline bool JSValue::getTruncatedUInt32(uint32_t& v) const
+{
+    return JSImmediate::isImmediate(this) ? JSImmediate::getTruncatedUInt32(this, v) : asCell()->getTruncatedUInt32(v);
 }
 
 inline void JSValue::mark()
@@ -387,7 +394,7 @@ inline JSObject* JSValue::toObject(ExecState* exec) const
 ALWAYS_INLINE int32_t JSValue::toInt32(ExecState* exec) const
 {
     int32_t i;
-    if (JSImmediate::isImmediate(this) && JSImmediate::getInt32(this, i))
+    if (JSImmediate::isImmediate(this) && JSImmediate::getTruncatedInt32(this, i))
         return i;
     bool ok;
     return toInt32SlowCase(exec, ok);
@@ -396,7 +403,7 @@ ALWAYS_INLINE int32_t JSValue::toInt32(ExecState* exec) const
 inline uint32_t JSValue::toUInt32(ExecState* exec) const
 {
     uint32_t i;
-    if (JSImmediate::isImmediate(this) && JSImmediate::getUInt32(this, i))
+    if (JSImmediate::isImmediate(this) && JSImmediate::getTruncatedUInt32(this, i))
         return i;
     bool ok;
     return toUInt32SlowCase(exec, ok);
@@ -405,7 +412,7 @@ inline uint32_t JSValue::toUInt32(ExecState* exec) const
 inline int32_t JSValue::toInt32(ExecState* exec, bool& ok) const
 {
     int32_t i;
-    if (JSImmediate::isImmediate(this) && JSImmediate::getInt32(this, i)) {
+    if (JSImmediate::isImmediate(this) && JSImmediate::getTruncatedInt32(this, i)) {
         ok = true;
         return i;
     }
@@ -415,7 +422,7 @@ inline int32_t JSValue::toInt32(ExecState* exec, bool& ok) const
 inline uint32_t JSValue::toUInt32(ExecState* exec, bool& ok) const
 {
     uint32_t i;
-    if (JSImmediate::isImmediate(this) && JSImmediate::getUInt32(this, i)) {
+    if (JSImmediate::isImmediate(this) && JSImmediate::getTruncatedUInt32(this, i)) {
         ok = true;
         return i;
     }
